--- a/railo-java/railo-core/src/default.properties
+++ b/railo-java/railo-core/src/default.properties
@@ -1,12 +1,12 @@
-# Railo Core settings 
+# Railo Core settings
 railo.core.version="5.0.0.0"
 railo.core.state="alpha"
 railo.core.name="Togo"
-railo.core.name.explanation://en.wikipedia.org/wiki/Togo_(dog)"
-release.date="2014/02/05 15:46:00 CET"
+railo.core.name.explanation:"http://en.wikipedia.org/wiki/Togo_(dog)"
+railo.core.release.date="2014/02/05 15:46:00 CET"
 
-# OSGi settings 
+# OSGi settings
 felix.log.level= "debug"
 org.osgi.framework.storage.clean="onFirstInit"
-org.osgi.framework.bundle.parent= framework"
-org.osgi.framework.bootdelegation= "org.osgi.*,railo.*,javax.*,org.xml.*,sun.*,coldfusion.*,com.allaire.cfx,com.integral.fusiondebug.server,org.apache.xerces.*,org.apache.xml.*,org.w3c.*"
+org.osgi.framework.bundle.parent= "framework"
+org.osgi.framework.bootdelegation= "railo.*,org.osgi.*,javax.*,org.xml.*,sun.*,coldfusion.*,com.allaire.cfx,com.integral.fusiondebug.server,org.apache.xalan.*,org.apache.xerces.*,org.apache.xml.*,org.w3c.*"
