Classloader PermGen Mem Leak - RAILO-2896

--- a/railo-java/railo-core/build.properties
+++ b/railo-java/railo-core/build.properties
@@ -11,7 +11,7 @@ lib.dir=../libs
 build.dir=build
 dist.dir=dist
 core.dir=src
-railo.url=http://compile/compileAdmin.cfm
+railo.url=http://localhost:8888/www/compileAdmin.cfm
 railo.admin_source=../../railo-cfml/railo-admin/
 
 ### Railo Version ###
