changed version to 4.2.0.008

--- a/railo-java/railo-core/src/railo/runtime/Info.ini
+++ b/railo-java/railo-core/src/railo/runtime/Info.ini
@@ -1,7 +1,7 @@
 [version]
-number=4.2.0.007
+number=4.2.0.008
 level=os
-state=beta
+state=rc
 name=Togo
 name-explanation=http://en.wikipedia.org/wiki/Togo_(dog)
-release-date=2014/04/08 16:43:00 CET
+release-date=2014/05/02 10:21:00 CET
