changed version name

--- a/railo-java/railo-core/src/default.properties
+++ b/railo-java/railo-core/src/default.properties
@@ -1,8 +1,8 @@
 # Railo Core settings
 railo.core.version="5.0.0.0"
 railo.core.state="alpha"
-railo.core.name="Togo"
-railo.core.name.explanation:"http://en.wikipedia.org/wiki/Togo_(dog)"
+railo.core.name="George"
+railo.core.name.explanation:"http://en.wikipedia.org/wiki/George_(dog)"
 railo.core.release.date="2014/04/23 22:16:00 CET"
 
 # OSGi settings
