changed version to 4.2.0.009

--- a/railo-java/railo-core/src/railo/runtime/Info.ini
+++ b/railo-java/railo-core/src/railo/runtime/Info.ini
@@ -1,7 +1,7 @@
 [version]
-number=4.2.0.008
+number=4.2.0.009
 level=os
-state=rc
+state=final
 name=Togo
 name-explanation=http://en.wikipedia.org/wiki/Togo_(dog)
-release-date=2014/05/02 10:21:00 CET
+release-date=2014/05/13 12:04:00 CET
